--- a/3ModelIo.ipynb
+++ b/3ModelIo.ipynb
@@ -533,6 +533,229 @@
     "    }\n",
     ")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4.5 Caching\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'To make Italian pasta, you will need the following ingredients:\\n\\n- 2 cups of all-purpose flour\\n- 2 large eggs\\n- Pinch of salt\\n- Water (if needed)\\n\\nHere is a step-by-step guide to making Italian pasta:\\n\\n1. On a clean work surface, pour the flour and make a well in the center.\\n2. Crack the eggs into the well and add a pinch of salt.\\n3. Using a fork, gradually mix the eggs into the flour until a dough forms.\\n4. Knead the dough for about 10 minutes until it becomes smooth and elastic. If the dough is too dry, add a little water. If it is too wet, add a little more flour.\\n5. Wrap the dough in plastic wrap and let it rest for at least 30 minutes.\\n6. After resting, roll out the dough using a pasta machine or a rolling pin until it is thin.\\n7. Cut the dough into your desired shape, such as fettuccine or spaghetti.\\n8. Cook the pasta in a large pot of boiling salted water for 2-3 minutes or until al dente.\\n9. Drain the pasta and toss it with your favorite sauce or toppings.\\n\\nEnjoy your homemade Italian pasta!'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.globals import set_llm_cache\n",
+    "from langchain.cache import InMemoryCache\n",
+    "\n",
+    "set_llm_cache(InMemoryCache())\n",
+    "\n",
+    "\n",
+    "chat = ChatOpenAI(\n",
+    "    temperature=0.1,\n",
+    ")\n",
+    "\n",
+    "chat.predict(\"How do you make italian pasta\")  # 첫 번째 시도 4초\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'To make Italian pasta, you will need the following ingredients:\\n\\n- 2 cups of all-purpose flour\\n- 2 large eggs\\n- Pinch of salt\\n- Water (if needed)\\n\\nHere is a step-by-step guide to making Italian pasta:\\n\\n1. On a clean work surface, pour the flour and make a well in the center.\\n2. Crack the eggs into the well and add a pinch of salt.\\n3. Using a fork, gradually mix the eggs into the flour until a dough forms.\\n4. Knead the dough for about 10 minutes until it becomes smooth and elastic. If the dough is too dry, add a little water. If it is too wet, add a little more flour.\\n5. Wrap the dough in plastic wrap and let it rest for at least 30 minutes.\\n6. After resting, roll out the dough using a pasta machine or a rolling pin until it is thin.\\n7. Cut the dough into your desired shape, such as fettuccine or spaghetti.\\n8. Cook the pasta in a large pot of boiling salted water for 2-3 minutes or until al dente.\\n9. Drain the pasta and toss it with your favorite sauce or toppings.\\n\\nEnjoy your homemade Italian pasta!'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chat.predict(\"How do you make italian pasta\")  # 두 번째 시도 즉시\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 데이터베이스를 사용하여 저장\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32;1m\u001b[1;3m[llm/start]\u001b[0m \u001b[1m[1:llm:ChatOpenAI] Entering LLM run with input:\n",
+      "\u001b[0m{\n",
+      "  \"prompts\": [\n",
+      "    \"Human: How do you make italian pasta\"\n",
+      "  ]\n",
+      "}\n",
+      "\u001b[36;1m\u001b[1;3m[llm/end]\u001b[0m \u001b[1m[1:llm:ChatOpenAI] [4.00s] Exiting LLM run with output:\n",
+      "\u001b[0m{\n",
+      "  \"generations\": [\n",
+      "    [\n",
+      "      {\n",
+      "        \"text\": \"To make Italian pasta, you will need the following ingredients:\\n\\n- 2 cups of all-purpose flour\\n- 2 large eggs\\n- 1/2 teaspoon of salt\\n- Water (if needed)\\n\\nHere is a step-by-step guide to making Italian pasta:\\n\\n1. On a clean work surface, pour the flour and make a well in the center.\\n2. Crack the eggs into the well and add the salt.\\n3. Using a fork, gradually mix the eggs into the flour until a dough forms.\\n4. Knead the dough for about 10 minutes until it is smooth and elastic. If the dough is too dry, add a little water. If it is too wet, add a little more flour.\\n5. Wrap the dough in plastic wrap and let it rest for at least 30 minutes.\\n6. After resting, roll out the dough using a pasta machine or a rolling pin until it is thin.\\n7. Cut the dough into your desired shape, such as fettuccine or spaghetti.\\n8. Cook the pasta in a large pot of boiling salted water for 2-3 minutes or until al dente.\\n9. Drain the pasta and toss it with your favorite sauce or toppings.\\n\\nEnjoy your homemade Italian pasta!\",\n",
+      "        \"generation_info\": {\n",
+      "          \"finish_reason\": \"stop\"\n",
+      "        },\n",
+      "        \"type\": \"ChatGeneration\",\n",
+      "        \"message\": {\n",
+      "          \"lc\": 1,\n",
+      "          \"type\": \"constructor\",\n",
+      "          \"id\": [\n",
+      "            \"langchain\",\n",
+      "            \"schema\",\n",
+      "            \"messages\",\n",
+      "            \"AIMessage\"\n",
+      "          ],\n",
+      "          \"kwargs\": {\n",
+      "            \"content\": \"To make Italian pasta, you will need the following ingredients:\\n\\n- 2 cups of all-purpose flour\\n- 2 large eggs\\n- 1/2 teaspoon of salt\\n- Water (if needed)\\n\\nHere is a step-by-step guide to making Italian pasta:\\n\\n1. On a clean work surface, pour the flour and make a well in the center.\\n2. Crack the eggs into the well and add the salt.\\n3. Using a fork, gradually mix the eggs into the flour until a dough forms.\\n4. Knead the dough for about 10 minutes until it is smooth and elastic. If the dough is too dry, add a little water. If it is too wet, add a little more flour.\\n5. Wrap the dough in plastic wrap and let it rest for at least 30 minutes.\\n6. After resting, roll out the dough using a pasta machine or a rolling pin until it is thin.\\n7. Cut the dough into your desired shape, such as fettuccine or spaghetti.\\n8. Cook the pasta in a large pot of boiling salted water for 2-3 minutes or until al dente.\\n9. Drain the pasta and toss it with your favorite sauce or toppings.\\n\\nEnjoy your homemade Italian pasta!\",\n",
+      "            \"additional_kwargs\": {}\n",
+      "          }\n",
+      "        }\n",
+      "      }\n",
+      "    ]\n",
+      "  ],\n",
+      "  \"llm_output\": {\n",
+      "    \"token_usage\": {\n",
+      "      \"prompt_tokens\": 13,\n",
+      "      \"completion_tokens\": 254,\n",
+      "      \"total_tokens\": 267\n",
+      "    },\n",
+      "    \"model_name\": \"gpt-3.5-turbo\",\n",
+      "    \"system_fingerprint\": \"fp_86156a94a0\"\n",
+      "  },\n",
+      "  \"run\": null\n",
+      "}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'To make Italian pasta, you will need the following ingredients:\\n\\n- 2 cups of all-purpose flour\\n- 2 large eggs\\n- 1/2 teaspoon of salt\\n- Water (if needed)\\n\\nHere is a step-by-step guide to making Italian pasta:\\n\\n1. On a clean work surface, pour the flour and make a well in the center.\\n2. Crack the eggs into the well and add the salt.\\n3. Using a fork, gradually mix the eggs into the flour until a dough forms.\\n4. Knead the dough for about 10 minutes until it is smooth and elastic. If the dough is too dry, add a little water. If it is too wet, add a little more flour.\\n5. Wrap the dough in plastic wrap and let it rest for at least 30 minutes.\\n6. After resting, roll out the dough using a pasta machine or a rolling pin until it is thin.\\n7. Cut the dough into your desired shape, such as fettuccine or spaghetti.\\n8. Cook the pasta in a large pot of boiling salted water for 2-3 minutes or until al dente.\\n9. Drain the pasta and toss it with your favorite sauce or toppings.\\n\\nEnjoy your homemade Italian pasta!'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.globals import set_llm_cache, set_debug\n",
+    "from langchain.cache import SQLiteCache\n",
+    "\n",
+    "set_llm_cache(SQLiteCache(\"cache.db\"))\n",
+    "set_debug(True)  # 디버그 로그\n",
+    "\n",
+    "chat = ChatOpenAI(\n",
+    "    temperature=0.1,\n",
+    ")\n",
+    "\n",
+    "chat.predict(\"How do you make italian pasta\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4.6 Serialization\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingredients:\n",
+      "- 1 cup of rice\n",
+      "- 1 cup of water\n",
+      "- 1 tablespoon of nuruk (fermentation starter)\n",
+      "- 1 tablespoon of yeast\n",
+      "\n",
+      "Instructions:\n",
+      "1. Rinse the rice thoroughly and soak it in water for at least 1 hour.\n",
+      "2. Drain the rice and steam it until it is fully cooked.\n",
+      "3. Let the rice cool down to room temperature.\n",
+      "4. In a large bowl, mix the nuruk and yeast with the water until well combined.\n",
+      "5. Add the cooked rice to the mixture and stir well.\n",
+      "6. Cover the bowl with a clean cloth and let it ferment in a warm place for 3-4 days.\n",
+      "7. After the fermentation process is complete, strain the mixture through a cheesecloth to remove any solids.\n",
+      "8. Transfer the liquid to a clean container and let it sit for another 1-2 days to allow the flavors to develop.\n",
+      "9. Your homemade soju is now ready to be enjoyed! Serve chilled and enjoy responsibly. \n",
+      "\n",
+      "Ingredients:\n",
+      "- 4 cups all-purpose flour\n",
+      "- 1 packet active dry yeast\n",
+      "- 1 1/2 cups warm water\n",
+      "- 2 tablespoons sugar\n",
+      "- 2 teaspoons salt\n",
+      "- 2 tablespoons olive oil\n",
+      "\n",
+      "Instructions:\n",
+      "1. In a large mixing bowl, combine the warm water, sugar, and yeast. Let it sit for about 5-10 minutes until the yeast is foamy.\n",
+      "2. Add the flour, salt, and olive oil to the yeast mixture. Mix until a dough forms.\n",
+      "3. Knead the dough on a floured surface for about 5-10 minutes until it is smooth and elastic.\n",
+      "4. Place the dough in a greased bowl, cover with a clean towel, and let it rise in a warm place for about 1-2 hours or until doubled in size.\n",
+      "5. Preheat the oven to 375°F (190°C).\n",
+      "6. Punch down the dough and shape it into a loaf. Place the loaf on a greased baking sheet or in a greased loaf pan.\n",
+      "7. Cover the loaf with a clean towel and let it rise for another 30-45 minutes.\n",
+      "8. Bake the bread in the preheated oven for 25-30 minutes or until golden brown and sounds hollow when tapped on the bottom.\n",
+      "9. Let the bread cool before slicing and serving. Enjoy! \n",
+      "\n",
+      "Tokens Used: 0\n",
+      "\tPrompt Tokens: 0\n",
+      "\tCompletion Tokens: 0\n",
+      "Successful Requests: 0\n",
+      "Total Cost (USD): $0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.callbacks import get_openai_callback\n",
+    "\n",
+    "chat = ChatOpenAI(\n",
+    "    temperature=0.1,\n",
+    ")\n",
+    "\n",
+    "\n",
+    "with get_openai_callback() as usage:  # LLM을 콜백으로 불러옴\n",
+    "    a = chat.predict(\"What is the recipe for soju\")\n",
+    "    b = chat.predict(\"What is the recipe for bread\")\n",
+    "    print(a, \"\\n\")\n",
+    "    print(b, \"\\n\")\n",
+    "    print(usage)  # 프롬프트가 얼마나 많은 토큰을 사용했는지 보여줌\n"
+   ]
   }
  ],
  "metadata": {
