Data Load. Split,embedding => 질문하기

--- a/5Memory.ipynb
+++ b/5Memory.ipynb
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,18 +792,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content='Nice to meet you, Celina! How can I assist you today?'\n"
+     ]
+    }
+   ],
    "source": [
     "invoke_chain(\"My name is celina\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content='Your name is Celina.'\n"
+     ]
+    }
+   ],
    "source": [
     "invoke_chain(\"What is my name?\")\n"
    ]
