Map Reduce LCEL Chain

--- a/6RAG.ipynb
+++ b/6RAG.ipynb
@@ -1732,6 +1732,255 @@
    "source": [
     "chain.run(\"Describe Victory Mansions\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LangChain Expression Language(LCFL): stuff chain 구현\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='Victory Mansions is a building where Winston Smith lives. It is described as having glass doors, a hallway that smells of boiled cabbage and old rag mats, and being seven flights up. The building has a faulty lift, and there is a large colored poster of a man\\'s face with the caption \"BIG BROTHER IS WATCHING YOU\" displayed inside the building.')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.document_loaders import UnstructuredFileLoader\n",
+    "from langchain.text_splitter import CharacterTextSplitter\n",
+    "from langchain.embeddings import OpenAIEmbeddings, CacheBackedEmbeddings\n",
+    "from langchain.vectorstores import FAISS\n",
+    "from langchain.storage import LocalFileStore\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain.schema.runnable import RunnablePassthrough\n",
+    "\n",
+    "llm = ChatOpenAI(\n",
+    "    temperature=0.1,\n",
+    ")\n",
+    "\n",
+    "cache_dir = LocalFileStore(\"./.cache/\")\n",
+    "\n",
+    "splitter = CharacterTextSplitter.from_tiktoken_encoder(\n",
+    "    separator=\"\\n\",\n",
+    "    chunk_size=600,\n",
+    "    chunk_overlap=100,\n",
+    ")\n",
+    "loader = UnstructuredFileLoader(\"./files/chapter_one.txt\")\n",
+    "\n",
+    "docs = loader.load_and_split(text_splitter=splitter)\n",
+    "\n",
+    "embeddings = OpenAIEmbeddings()\n",
+    "\n",
+    "cached_embeddings = CacheBackedEmbeddings.from_bytes_store(embeddings, cache_dir)\n",
+    "\n",
+    "vectorstore = FAISS.from_documents(docs, cached_embeddings)\n",
+    "\n",
+    "# retriver : document들의 list 반환\n",
+    "retriver = vectorstore.as_retriever()\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_messages( # chain에 연결할 prompt 필요 \n",
+    "    [\n",
+    "        (\n",
+    "            \"system\", # 시스템 메세지\n",
+    "            \"You are a helpful assistant. Answer questions using only the following context. If you don't know the answer just say you don't know, don't make it up:\\n\\n{context}\",\n",
+    "        ),\n",
+    "        (\"human\", \"{question}\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "chain = (\n",
+    "    {\n",
+    "     # context는 retriver로부터 오도록 하기 \n",
+    "        \"context\": retriver, # document 의 list가 반화ㄴ되어 들어감 \n",
+    "        \"question\": RunnablePassthrough(), # 입력된 문자열을 어디에서 쓰고 싶을 때 RunnablePassthrough을 사용 \n",
+    "    }\n",
+    "    | prompt  # prompt.format_messages(context=) z콘덱스트랑 퀘스천 전달하는 거랑 같은 동장 \n",
+    "    | llm # 모델 연결\n",
+    ")\n",
+    "\n",
+    "# run이 아니라 invoke 메세지 사용 \n",
+    "chain.invoke(\"Describe Victory Mansions\")  \n",
+    "# 위 문자열을 retriver에게 전달하고 => 결과로써 출력된 document를 promt의 context에 입력 / 질문을 prompt 의 question property로 전달하기 \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Map Reduce LCEL Chain\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOF while scanning triple-quoted string literal (3476756704.py, line 38)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[9], line 38\u001b[0;36m\u001b[0m\n\u001b[0;31m    final doc | prompt | llm\u001b[0m\n\u001b[0m                            \n^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOF while scanning triple-quoted string literal\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "=> 큰 용량의 문서 사용에 유리 \n",
+    "\n",
+    "# 1. list 내부의 모든 문서들을 위한 Prompt 만들어서 llm에게 던지기 \n",
+    "for doc in list of docs | prompt | llm\n",
+    "\n",
+    "# 2. llm으로부터 받은 reponse들을 취합해 하나의 document 만들기 \n",
+    "for respone in list of llms response | put them all together\n",
+    "\n",
+    "# 3. 만들어진 하나의 최종 document : LLM 을 위한 prompt 로 전달 \n",
+    "final doc | prompt | llm\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='Victory Gin is a colorless liquid with a plain white label that gives off a sickly, oily smell. It is described as tasting like nitric acid, causing a burning sensation in the belly and a shock when consumed. Despite its harsh taste, it seems to have a numbing effect, making the world appear more cheerful to the consumer. Victory Cigarettes are also mentioned, with the protagonist struggling to light one properly.')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.document_loaders import UnstructuredFileLoader\n",
+    "from langchain.text_splitter import CharacterTextSplitter\n",
+    "from langchain.embeddings import OpenAIEmbeddings, CacheBackedEmbeddings\n",
+    "from langchain.vectorstores import FAISS\n",
+    "from langchain.storage import LocalFileStore\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain.schema.runnable import RunnablePassthrough, RunnableLambda\n",
+    "\n",
+    "llm = ChatOpenAI(\n",
+    "    temperature=0.1,\n",
+    ")\n",
+    "\n",
+    "cache_dir = LocalFileStore(\"./.cache/\")\n",
+    "\n",
+    "splitter = CharacterTextSplitter.from_tiktoken_encoder(\n",
+    "    separator=\"\\n\",\n",
+    "    chunk_size=600,\n",
+    "    chunk_overlap=100,\n",
+    ")\n",
+    "loader = UnstructuredFileLoader(\"./files/chapter_one.txt\")\n",
+    "\n",
+    "docs = loader.load_and_split(text_splitter=splitter)\n",
+    "\n",
+    "embeddings = OpenAIEmbeddings()\n",
+    "\n",
+    "cached_embeddings = CacheBackedEmbeddings.from_bytes_store(embeddings, cache_dir)\n",
+    "\n",
+    "vectorstore = FAISS.from_documents(docs, cached_embeddings)\n",
+    "\n",
+    "# retriever : string 값을 입력받고 document들을 출력해줌\n",
+    "retriever = vectorstore.as_retriever()\n",
+    "\n",
+    "# 1번 체인(map_doc_chain) : 1. list 내부의 모든 문서들을 위한 Prompt 만들어서 llm에게 던지기\n",
+    "map_doc_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\", # 질문에 대한 답변이 포함되어 있는 것 같은 부분을, 그대로 반환해달라 요청!\n",
+    "            \"\"\"\n",
+    "            Use the following portion of a long document to see if any of the text is relevant to answer the question. Return any relevant text verbatim. If there is no relevant text, return : ''\n",
+    "            -------\n",
+    "            {context}\n",
+    "            \"\"\",\n",
+    "        ),\n",
+    "        (\"human\", \"{question}\"),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "map_doc_chain = map_doc_prompt | llm \n",
+    "\n",
+    "\n",
+    "\n",
+    "# map_chain용 함수 : \n",
+    "# 한 개의 string만 반환해야 함!\n",
+    "def map_docs(inputs):\n",
+    "    documents = inputs[\"documents\"] # Input에서 document 값 추출\n",
+    "    question = inputs[\"question\"]# Input에서 question 값 추출\n",
+    "\n",
+    "     # 여기서의 반환값 => \"chain = {\"context\": 여기!\" 에 들어감\n",
+    "    return \"\\n\\n\".join( # 2. llm으로부터 받은 reponse들을 취합해 하나의 document 만들기 \n",
+    "        map_doc_chain.invoke(  # 각 문서마다 질문을 던져주는 또다른 chain(1번 체인(map_doc_chain)) 실행!\n",
+    "            {\"context\": doc.page_content, \"question\": question} \n",
+    "        ).content\n",
+    "        for doc in documents\n",
+    "    \n",
+    "\n",
+    "    # # 또는\n",
+    "\n",
+    "    # results = []\n",
+    "    # for document in documents:\n",
+    "    #     result = map_doc_chain.invoke(\n",
+    "    #         \"context\": doc.page_content, \"question\": question} \n",
+    "    #     ).content\n",
+    "    #     results.append(result)\n",
+    "    # results = \"\\n\\n\".join(results)\n",
+    "    # return results\n",
+    "    \n",
+    "    ) \n",
+    "\n",
+    "\n",
+    "# map_chain : retriever를 통해 얻어진 document 전달  : 각 문서를 살펴보며 사용자 질문 대답에 필요한 정보가 담겨 있는지 확인 \n",
+    "# => map_chain 목표 : 사용자의 질문과 관련 있는 하나의 문서!\n",
+    "map_chain = { \n",
+    "    \"documents\": retriever, # documents는 retriever으로부터 받아 옴\n",
+    "    \"question\": RunnablePassthrough(), #사용자 질문 대답 전달\n",
+    "} | RunnableLambda(map_docs)\n",
+    "# RunnableLambda : chain과 그 내부 어디서든 function을 호출할 수 있도록 해줌\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 2번 체인(final_prompt) :  3. 만들어진 하나의 최종 document : LLM을 위한 prompt로 전달 \n",
+    "\n",
+    "final_prompt = ChatPromptTemplate.from_messages(\n",
+    "    [\n",
+    "        (\n",
+    "            \"system\", #최종적으로 LLm에게 던지는 질문  ( 할루시네이션 방지 + )\n",
+    "            \"\"\"\n",
+    "            Given the following extracted parts of a long document and a question, create a final answer. \n",
+    "            If you don't know the answer, just say that you don't know. Don't try to make up an answer.\n",
+    "            ------\n",
+    "            {context} \n",
+    "            \"\"\", # {context} 에는 많은 발췌문들이 삽입 \n",
+    "        ),\n",
+    "        (\"human\", \"{question}\"), # 사용자의 질문 \n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "chain = {\"context\": map_chain, \"question\": RunnablePassthrough()} | final_prompt | llm\n",
+    "# \"question\": RunnablePassthrough() : 아래 질문이 이 부분을 통과해서 final_prompt의 question에 전달되게 함\n",
+    "\n",
+    "# 실행!\n",
+    "chain.invoke(\"Describle victory mention\")"
+   ]
   }
  ],
  "metadata": {
